--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -11,6 +11,10 @@
      <h2 class="text-center"> {{ news_item.title }} </h2>
    </div>
 
+   
+   <h2 class="text-center"> <a href="{% url 'article' news_item.id%}">{{ news_item.title }}</a> </h2>
+        </a>
+        <p class="text-center">{{news_item.post|truncatechars:200}} </p>
  </div>
 
  {% empty %}
